@@ -49,16 +49,11 @@ DEF (0x18,  AUX_DCCM)
 DEF (0x19,  UNLOCKLINE)
 DEF (0x19,  IC_IVIL)
 DEF (0x1A,  IC_RAM_ADDRESS)
-DEF (0x1A,  IC_RAM_ADDRESS)
-DEF (0x1B,  IC_TAG)
 DEF (0x1B,  IC_TAG)
 DEF (0x1C,  IC_WP)
-DEF (0x1C,  IC_WP)
-DEF (0x1D,  IC_DATA)
 DEF (0x1D,  IC_DATA)
 DEF (0x20,  SRAM_SEQ)
 DEF (0x21,  COUNT0)
-DEF (0x22,  CONTROL0)
 DEF (0x22,  CONTROL0)
 DEF (0x23,  LIMIT0)
 DEF (0x24,  PCPORT)
@@ -70,19 +65,13 @@ DEF (0x28,  AUX_VBFDW_BM1)
 DEF (0x29,  AUX_VBFDW_ACCU)
 DEF (0x2A,  AUX_VBFDW_OFST)
 DEF (0x2B,  AUX_VBFDW_INTSTAT)
-DEF (0x2C,  AX2 (A4))
 DEF (0x2C,  AUX_XMAC0_24)
-DEF (0x2D,  AY2 (A4))
 DEF (0x2D,  AUX_XMAC1_24)
-DEF (0x2E,  MX2 (A4))
 DEF (0x2E,  AUX_XMAC2_24)
-DEF (0x2F,  MY2 (A4))
 DEF (0x2F,  AUX_FBF_STORE_16)
 DEF (0x30,  AX0)
 DEF (0x31,  AX1)
-DEF (0x32,  AY0 (A4))
 DEF (0x32,  AUX_CRC_POLY)
-DEF (0x33,  AY1 (A4))
 DEF (0x33,  AUX_CRC_MODE)
 DEF (0x34,  MX0)
 DEF (0x35,  MX1)
@@ -111,14 +100,9 @@ DEF (0x4C,  DC_FLDL)
 DEF (0x50,  HEXDATA)
 DEF (0x51,  HEXCTRL)
 DEF (0x52,  LED)
-DEF (0x53,  LCDINSTR (A4))
-DEF (0x54,  LCDDATA (A4))
-DEF (0x55,  LCDSTAT (A4))
 DEF (0x56,  DILSTAT)
 DEF (0x57,  SWSTAT)
 DEF (0x58,  DC_RAM_ADDR)
-DEF (0x58,  DC_RAM_ADDR)
-DEF (0x59,  DC_TAG)
 DEF (0x59,  DC_TAG)
 DEF (0x5A,  DC_WP)
 DEF (0x5B,  DC_DATA)
@@ -216,7 +200,6 @@ DEF (0xFE,  IFETCH_QUEUE_BUILD)
 DEF (0xFF,  SMART_BUILD)
 DEF (0x100, COUNT1)
 DEF (0x101, CONTROL1)
-DEF (0x101, CONTROL1)
 DEF (0x102, LIMIT1)
 DEF (0x103, TIMER_XX)
 DEF (0x120, ARCANGEL_PERIPH_XX)
@@ -258,24 +241,18 @@ DEF (0x234, AP_AC6)
 DEF (0x235, AP_AMV7)
 DEF (0x236, AP_AMM7)
 DEF (0x237, AP_AC7)
-DEF (0x240, CC_*)
-DEF (0x250, PCT_COUNT*)
-DEF (0x260, PCT_SNAP*)
-DEF (0x270, PCT_CONFIG*)
 DEF (0x278, PCT_CONTROL)
 DEF (0x279, PCT_BANK)
 DEF (0x300, FP_STATUS)
-DEF (0x300, RTT (A5 - A4))
 DEF (0x301, AUX_DPFP1L)
-DEF (0x301, RTT (A5 - A4))
+DEF (0x301, D1L)
 DEF (0x302, AUX_DPFP1H)
-DEF (0x302, RTT (A5 - A4))
+DEF (0x302, D1H)
 DEF (0x303, AUX_DPFP2L)
-DEF (0x303, RTT (A5 - A4))
+DEF (0x303, D2L)
 DEF (0x304, AUX_DPFP2H)
-DEF (0x304, RTT (A5 - A4))
+DEF (0x304, D2H)
 DEF (0x305, DPFP_STATUS)
-DEF (0x305, RTT (A5 - A4))
 DEF (0x306, RTT)
 DEF (0x400, ERET)
 DEF (0x401, ERBTA)
